.archive/kube/deploy/core/secrets/onepassword-connect/app/netpol.yaml
---
# yaml-language-server: $schema=https://crds.jank.ing/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app onepassword-connect
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # external-secrets
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: external-secrets
      toPorts:
        - ports:
            - port: "8443"
              protocol: "TCP"
            - port: "8443"
              protocol: "UDP"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    - toFQDNs: &dns
        - matchPattern: "1password.com"
        - matchPattern: "*.1password.com"
        - matchPattern: "1passwordusercontent.com"
        - matchPattern: "*.1passwordusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: "ANY"
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns: *dns
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: &app onepassword-connect
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/onepassword-connect: allow
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
            app.kubernetes.io/name: *app
      toPorts:
        - ports:
            - port: "8443"
              protocol: "TCP"
            - port: "8443"
              protocol: "UDP"
